# habitat

./: .gitignore  README.md  dev.sh  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  cli.py  config.py  database.py  datasets.py  dates.py  db.py  ingestion.py  ingestion_service.py  main.py  neso.py  neso_client.py  neso_queries.py  normalizers.py  parsing.py  repository.py  revenue.py
backend/tests/: test_dates.py  test_neso.py
frontend/: Dockerfile  index.html  package.json  server.js
frontend/src/: App.vue  api.ts  chartModes.ts  styles.css
frontend/src/components/: AnalysisSection.vue  AppDatePicker.vue  AppHeader.vue  AppSelect.vue  AppSidebar.vue  BrandLogo.vue  ChartModeSwitcher.vue  ChartSkeleton.vue  ExecutiveSummary.vue  Icons.vue  InsightStrip.vue  LoadingSpinner.vue  LoadingState.vue  MarketComparisonTable.vue  MarketPosition.vue  NoDataPanel.vue  PageToolbar.vue  RawResultsPanel.vue  Sparkline.vue  SummaryTickerStrip.vue  TickerRail.vue  TopUnitsLeaderboard.vue
frontend/src/components/charts/: DeliveryWindowChart.vue  MarketShareChart.vue  ProductMixChart.vue  UnitRevenueChart.vue
frontend/src/composables/: useDashboardData.ts  useEChart.ts
frontend/src/lib/: echarts.ts
frontend/src/utils/: date.ts  format.ts
