[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "habitat-auction-results-backend"
version = "0.1.0"
description = "FastAPI ingestion service for Habitat Energy NESO auction results"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "psycopg[binary]>=3.1",
  "python-dotenv>=1.0",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
